WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
291868
REGRESSION(
292709@main
): Web content process occasionally crashes under UnifiedPDFPlugin::updateScrollingExtents() during visible content rect updates
https://bugs.webkit.org/show_bug.cgi?id=291868
Summary
REGRESSION(292709@main): Web content process occasionally crashes under Unifi...
Abrar Rahman Protyasha
Reported
2025-04-21 16:20:37 PDT
rdar://149639054
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2025-04-21 16:41:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44352
EWS
Comment 2
2025-04-21 19:26:34 PDT
Committed
293943@main
(1c54f3b67b8e): <
https://commits.webkit.org/293943@main
> Reviewed commits have been landed. Closing PR #44352 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug