REGRESSION(292709@main): Web content process occasionally crashes under UnifiedPDFPlugin::updateScrollingExtents() during visible content rect updates https://bugs.webkit.org/show_bug.cgi?id=291868 rdar://149639054

Reviewed by Wenson Hsieh and Megan Gardner.

This is a follow-up fix to 293366@main. We sometimes still see null
dereferences (of the scroll container layer) like this:

```
WebKit::UnifiedPDFPlugin::updateScrollingExtents() (WebKit)
  WebKit::PluginView::mainFramePageScaleFactorDidChange() (WebKit)
    auto WebKit::WebPage::updateVisibleContentRects(WebKit::VisibleContentRectUpdateInfo const&, WTF::MonotonicTime)::$_0::operator()<WebCore::IntPoint>(float, WebCore::IntPoint const&, bool) const (WebKit)
      WebKit::WebPage::updateVisibleContentRects(WebKit::VisibleContentRectUpdateInfo const&, WTF::MonotonicTime) (WebKit)
```

In this patch, we further harden the plugin agains such crashes by null
checking the scroll container layer. This is appropriate because said
layer is not guaranteed to be well formed during certain visible content
rect updates.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::mainFramePageScaleFactorDidChange):

Drive-by: avoid calling into updateScrollingExtents() to begin with in
unsupported configurations.

(WebKit::UnifiedPDFPlugin::updateScrollingExtents):

Canonical link: https://commits.webkit.org/293943@main